# pycharm_agent

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.claude/commands/: gcp.md  pab.md
backend/: main.py  pyproject.toml
backend/models/: __init__.py  agent.py  chat.py  diff.py
backend/prompts/: __init__.py
backend/routers/: __init__.py  agent.py  chat.py  config.py
backend/services/: __init__.py  api_key_manager.py  config_manager.py  diff_generator.py  llm_service.py
plugin/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
plugin/src/main/kotlin/com/hdsp/pycharm_agent/actions/: AcceptDiffAction.kt  RejectDiffAction.kt
plugin/src/main/kotlin/com/hdsp/pycharm_agent/services/: BackendClient.kt  DiffApplicationService.kt  ToolExecutor.kt
plugin/src/main/kotlin/com/hdsp/pycharm_agent/settings/: AgentSettings.kt  AgentSettingsConfigurable.kt
plugin/src/main/kotlin/com/hdsp/pycharm_agent/toolwindow/: AgentToolWindowFactory.kt  MainAgentPanel.kt
